--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -22,3 +22,12 @@ jobs:
         uses: hexlet/project-action@release
         with:
           hexlet-id: ${{ secrets.HEXLET_ID }}
+
+      - name: Install dependencies
+        run: make install
+
+      - name: Run Rubocop
+        run: make lint
+      
+      - name: Run Tests
+        run: make test
