Удалён неиспользуемый power_assert

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,5 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Run tests
-      run: bundle exec rake
+    - name: Install
+      run: make install
+    
+    - name: Tests
+      run: make test
