--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Set up Ruby 3.2.2
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.2.2
       
