Настройка GitHub Actions

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,4 +32,7 @@ jobs:
       run: make install
     
     - name: Tests
-      run: make test
+      run: bundle exec rake test
+
+    - name: Rubocop
+      run: bundle exec rubocop
